--- a/snap/local/bin/install
+++ b/snap/local/bin/install
@@ -2,7 +2,7 @@
 
 RELEASE="16.04.6"
 ARCHITECTURE="amd64"
-CODENAME="precise-pangolin"
+CODENAME="xenial-xerus"
 ISOFILE="$SNAP_USER_COMMON"/ubuntu-$RELEASE-desktop-$ARCHITECTURE.iso
 DISKFILE="$SNAP_USER_COMMON"/$CODENAME.qcow2
 
